🍻 SSO Google and more
Completed demo of SSO to graphql BE with passport. Completed demo app for revitalize. Tackled 90% of the challenges with production integration of apollo boost state mgmt.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -59,3 +59,20 @@ code {
     max-width: 800px;
 }
 
+
+
+.register-form {
+    form {
+        display: flex;
+        flex-direction: column;
+        input {
+            background-color: #131313;
+            color: white;
+            margin-bottom: 15px;
+            padding: 10px;
+            border: none;
+        }
+    }
+}
+
+
